# ChangeLog for media-sound/amarok-utils
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok-utils/Attic/ChangeLog,v 1.13 2010/02/19 16:41:52 jmbsvicetto Exp $

*amarok-utils-2.2.2.90 (19 Feb 2010)

  19 Feb 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +amarok-utils-2.2.2.90.ebuild:
  Bumped amarok to the 2.2.2.90 release (2.3 Beta 1).
  Dropped the bindist use flag and added a hard dep on taglib[asf,mp4] (bug
  299899) - thanks to Jeff Mitchell (jefferai).

*amarok-utils-2.2.2 (08 Jan 2010)

  08 Jan 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +amarok-utils-2.2.2.ebuild:
  Bumped amarok-utils to 2.2.2 (should be out next Monday).

*amarok-utils-2.2.1.90 (16 Dec 2009)

  16 Dec 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +amarok-utils-2.2.1.90.ebuild:
  Version bump

*amarok-utils-2.2.1-r1 (11 Dec 2009)

  11 Dec 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +amarok-utils-2.2.1-r1.ebuild:
  Added bindist use flag and fixed dep on media-libs/taglib accordingly.

  15 Nov 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  -amarok-utils-2.1.ebuild, -amarok-utils-2.1.1.ebuild:
  Remove old 2.1 ebuilds

*amarok-utils-2.2.1 (14 Nov 2009)

  14 Nov 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +amarok-utils-2.2.1.ebuild:
  Bumped amarok-utils to release 2.2.1.
  This release like 2.2.0 segfauls on start if built with binutils-2.20
  (bug 290662).

  09 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  amarok-utils-2.2.0.ebuild:
  stable x86, bug 290483

  26 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  amarok-utils-2.2.0.ebuild:
  amd64 stable wrt #290483

*amarok-utils-2.2.0 (02 Oct 2009)

  02 Oct 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +amarok-utils-2.2.0.ebuild:
  Bumped amarok-utils to version 2.2.0.

*amarok-utils-2.1.1 (26 Jun 2009)

  26 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org>