@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/amarok-utils
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok-utils/Attic/ChangeLog,v 1.13 2010/02/19 16:41:52 jmbsvicetto Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok-utils/Attic/ChangeLog,v 1.14 2010/02/19 16:44:58 jmbsvicetto Exp $
+
+  19 Feb 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  -amarok-utils-2.2.1.ebuild, -amarok-utils-2.2.1-r1.ebuild,
+  -amarok-utils-2.2.1.90.ebuild:
+  Cleaned old versions.
 
 *amarok-utils-2.2.2.90 (19 Feb 2010)
 
